--- a/pokedex-ultra/src/app/home/home.page.html
+++ b/pokedex-ultra/src/app/home/home.page.html
@@ -1,20 +1,53 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-app>
+  <ion-grid fixed>
+    <ion-row class="main-categories">
+      <ion-col size="12">
+        <ion-row>
+          <ion-col size="12">
+            <img src="https://img.icons8.com/ios-filled/50/000000/pokeball--v2.png"/>
+            <h1>What Pokemon are you looking for?</h1>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="12">
+            <search-bar></search-bar>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="6">
+            <Categories [colores] = colores.amarillo (click) = "ruta()" ></Categories>
+          </ion-col>
+          <ion-col size="6">
+            <Categories [colores] = colores.rojo></Categories>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="6">
+            <Categories [colores] = colores.azul></Categories>
+          </ion-col>
+          <ion-col size="6">
+            <Categories [colores] = colores.verde></Categories>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="6">
+            <Categories [colores] = colores.morado></Categories>
+          </ion-col>
+          <ion-col size="6">
+            <Categories [colores] = colores.naranja></Categories>
+          </ion-col>
+        </ion-row>        
+      </ion-col>
+    </ion-row>
+    <ion-row class="main-news">
+      <ion-col size="12">
+        <Poke-news></Poke-news>
+      </ion-col>
+    </ion-row>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
+    <generations></generations>
+    <pokedex></pokedex>
+    <pokedex></pokedex>
+    
+  </ion-grid>
+</ion-app>
