--- a/pokedex-ultra/src/app/home/home.page.scss
+++ b/pokedex-ultra/src/app/home/home.page.scss
@@ -1,27 +1,40 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+body{
+  overflow-y: auto;
+}
+ion-app{
+  background-color: white;    
+  overflow-y: auto;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+img{
+  opacity: 0.5;
+  position: fixed;
+  right: 0px;
+  top:-100px;
+  right: -100px; 
+  width: 300px;
+  z-index: -3;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+h1{
+  font-family: 'Segoe UI';
+  font-weight: 700;
+  font-size: 35px;
+  margin-left: 20px;
+  padding-top: 20px;   
+  color: black;
 }
 
-#container a {
-  text-decoration: none;
+.main-categories{
+  border: 0px;
+  border-radius: 0px 0px 20px 20px;
+  background-color: #fff;
+}
+
+.main-news{
+  background-color: #f5f5f5;
+}
+
+ion-grid{
+  background-color: #f5f5f5;
 }
