Todos los errores han sido arreglados

--- a/pokedex-ultra/src/app/components/search-bar/search-bar.component.html
+++ b/pokedex-ultra/src/app/components/search-bar/search-bar.component.html
@@ -1,3 +1,11 @@
-<p>
-  search-bar works!
-</p>
+
+<ion-grid fixed>
+  <ion-row>
+    <ion-col size="12">
+      <ion-searchbar placeholder="Search Pokemon, moves, etc" inputmode="text" 
+      type="text" (ionChange)="onSearchChange($event)" 
+      [debounce]="250" >
+      </ion-searchbar>    
+    </ion-col>
+  </ion-row>
+</ion-grid>
