Enrutamiento entre home y generations arreglado, componentes y pages creadas

--- a/pokedex-ultra/src/app/components/generations/generations.component.html
+++ b/pokedex-ultra/src/app/components/generations/generations.component.html
@@ -1,3 +1,112 @@
-<p>
-  generations works!
-</p>
+<ion-grid fixed>
+  <ion-row>
+    <ion-col size="3">
+      <ion-button (click)="ruta()" expand="block" fill="clear" shape="round">
+        <ion-icon name="arrow-back"></ion-icon>
+      </ion-button>
+      
+    </ion-col>
+    <ion-col size="6"></ion-col>
+    <ion-col size="3">
+      <ion-button (click)="onClick()" expand="block" fill="clear" shape="round">
+        <ion-icon name="options"></ion-icon>
+      </ion-button>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col size="6">
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>Generation I</ion-card-title>
+        </ion-card-header>
+        <img src="assets/img/pokeball.png" alt="A pokeball in the background" id="background">
+        <img src="assets/img/001.png" alt="An image of Charmander" id="grass1">
+        <img src="assets/img/004.png" alt="An image of Bulbasaur" id="fire1">
+        <img src="assets/img/007.png" alt="An image of Squirtle" id="water1">
+      </ion-card>
+    </ion-col>
+    <ion-col size="6">
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>Generation II</ion-card-title>
+        </ion-card-header>
+        <img src="assets/img/pokeball.png" alt="A pokeball in the background" id="background">
+        <img src="assets/img/152.png" alt="An image of Charmander" id="grass2">
+        <img src="assets/img/155.png" alt="An image of Bulbasaur" id="fire2">
+        <img src="assets/img/158.png" alt="An image of Squirtle" id="water2">
+      </ion-card>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col size="6">
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>Generation III</ion-card-title>
+        </ion-card-header>
+        <img src="assets/img/pokeball.png" alt="A pokeball in the background" id="background">
+        <img src="assets/img/252.png" alt="An image of Charmander" id="grass3">
+        <img src="assets/img/255.png" alt="An image of Bulbasaur" id="fire3">
+        <img src="assets/img/258.png" alt="An image of Squirtle" id="water3">
+      </ion-card>
+    </ion-col>
+    <ion-col size="6">
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>Generation IV</ion-card-title>
+        </ion-card-header>
+        <img src="assets/img/pokeball.png" alt="A pokeball in the background" id="background">
+        <img src="assets/img/387.png" alt="An image of Charmander" id="grass4">
+        <img src="assets/img/390.png" alt="An image of Bulbasaur" id="fire4">
+        <img src="assets/img/393.png" alt="An image of Squirtle" id="water4">
+      </ion-card>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col size="6">
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>Generation V</ion-card-title>
+        </ion-card-header>
+        <img src="assets/img/pokeball.png" alt="A pokeball in the background" id="background">
+        <img src="assets/img/495.png" alt="An image of Charmander" id="grass5">
+        <img src="assets/img/498.png" alt="An image of Bulbasaur" id="fire5">
+        <img src="assets/img/501.png" alt="An image of Squirtle" id="water5">
+      </ion-card>
+    </ion-col>
+    <ion-col size="6">
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>Generation VI</ion-card-title>
+        </ion-card-header>
+        <img src="assets/img/pokeball.png" alt="A pokeball in the background" id="background">
+        <img src="assets/img/650.png" alt="An image of Charmander" id="grass6">
+        <img src="assets/img/653.png" alt="An image of Bulbasaur" id="fire6">
+        <img src="assets/img/656.png" alt="An image of Squirtle" id="water6">
+      </ion-card>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col size="6">
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>Generation VII</ion-card-title>
+        </ion-card-header>
+        <img src="assets/img/pokeball.png" alt="A pokeball in the background" id="background">
+        <img src="assets/img/722.png" alt="An image of Charmander" id="grass7">
+        <img src="assets/img/725.png" alt="An image of Bulbasaur" id="fire7">
+        <img src="assets/img/728.png" alt="An image of Squirtle" id="water7">
+      </ion-card>
+    </ion-col>
+    <ion-col size="6">
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>Generation VIII</ion-card-title>
+        </ion-card-header>
+        <img src="assets/img/pokeball.png" alt="A pokeball in the background" id="background">
+        <img src="assets/img/810.png" alt="An image of Charmander" id="grass8">
+        <img src="assets/img/813.png" alt="An image of Bulbasaur" id="fire8">
+        <img src="assets/img/816.png" alt="An image of Squirtle" id="water8">
+      </ion-card>
+    </ion-col>
+  </ion-row>
+</ion-grid>
