--- a/pokedex-ultra/src/app/generations/generations.page.html
+++ b/pokedex-ultra/src/app/generations/generations.page.html
@@ -1,9 +1,3 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>generations</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-
+  <generations></generations>
 </ion-content>
