--- a/pokedex-ultra/src/app/generations/generations.page.html
+++ b/pokedex-ultra/src/app/generations/generations.page.html
@@ -1,3 +1,17 @@
 <ion-content>
+  <ion-row>
+    <ion-col size="3">
+      <ion-button (click)="ruta()" expand="block" fill="clear" shape="round">
+        <ion-icon name="arrow-back"></ion-icon>
+      </ion-button>
+      
+    </ion-col>
+    <ion-col size="6"></ion-col>
+    <ion-col size="3">
+      <ion-button (click)="onClick()" expand="block" fill="clear" shape="round">
+        <ion-icon name="options"></ion-icon>
+      </ion-button>
+    </ion-col>
+  </ion-row>
   <generations></generations>
 </ion-content>
