--- a/pokedex-ultra/src/app/pokedex/pokedex.page.html
+++ b/pokedex-ultra/src/app/pokedex/pokedex.page.html
@@ -1,9 +1,124 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>pokedex</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="6">
+        <ion-card *ngFor='let pokemon of pokemonArray'>
+          <ion-row>
+            <!--Sección de la informacion del pokemon-->
+            <ion-col id="info">
+              <!--Nombre y numero de la pokedex-->
+              <ion-card-header>
+                <ion-card-title>{{pokemon.name}}</ion-card-title>
+                <ion-card-subtitle>#{{pokemon.position}}</ion-card-subtitle>
+              </ion-card-header>
+  
+              <ion-card-content>
+                <!--Tipo de pokemon-->
+                <div *ngFor='let type of pokemon.type'>
+                  <div [ngSwitch]='type'>
+                    <ion-row>
+                      <ion-col size="2"></ion-col>
+    
+                      <ion-col *ngSwitchCase="'Fire'" size="8" id="type" style="background-color:#F6A368" >{{type}}
+                      </ion-col>
+                      <ion-col *ngSwitchCase="'Water'" size="8" id="type" style="background-color:#6FBAFF" >{{type}}
+                      </ion-col>
+                      <ion-col *ngSwitchCase="'Bug'" size="8" id="type" style="background-color:#C0DE8E" >{{type}}
+                      </ion-col>
+                      <ion-col *ngSwitchCase="'Dark'" size="8" id="type" style="background-color:#373737" >{{type}}
+                      </ion-col>
+                      <ion-col *ngSwitchCase="'Dragon'" size="8" id="type" style="background-color:#692BCF" >{{type}}
+                      </ion-col>
+                      <ion-col *ngSwitchCase="'Electric'" size="8" id="type" style="background-color:#FFD600" >{{type}}
+                      </ion-col>
+                      <ion-col *ngSwitchCase="'Fairy'" size="8" id="type" style="background-color:#FFAFF7" >{{type}}
+                      </ion-col>
+                      <ion-col *ngSwitchCase="'Fighting'" size="8" id="type" style="background-color:#FF5656" >{{type}}
+                      </ion-col>
+                      <ion-col *ngSwitchCase="'Flying'" size="8" id="type" style="background-color:#AED1D9" >{{type}}
+                      </ion-col>
+                      <ion-col *ngSwitchCase="'Ghost'" size="8" id="type" style="background-color:#807CB1" >{{type}}
+                      </ion-col>
+                      <ion-col *ngSwitchCase="'Grass'" size="8" id="type" style="background-color:#46D27E" >{{type}}
+                      </ion-col>
+                      <ion-col *ngSwitchCase="'Rock'" size="8" id="type" style="background-color:#B8A038" >{{type}}
+                      </ion-col>
+                      <ion-col *ngSwitchCase="'Ground'" size="8" id="type" style="background-color:#C88555" >{{type}}
+                      </ion-col>
+                      <ion-col *ngSwitchCase="'Ice'" size="8" id="type" style="background-color:#89E3FF" >{{type}}
+                      </ion-col>
+                      <ion-col *ngSwitchCase="'Normal'" size="8" id="type" style="background-color:#A8A090" >{{type}}
+                      </ion-col>
+                      <ion-col *ngSwitchCase="'Poison'" size="8" id="type" style="background-color:#BF46D2" >{{type}}
+                      </ion-col>
+                      <ion-col *ngSwitchCase="'Psychic'" size="8" id="type" style="background-color:#FC62FF" >{{type}}
+                      </ion-col>
+    
+    
+                    <ion-col size="2"></ion-col>
+                    </ion-row>
+                  </div>
+                </div>
+              </ion-card-content>
+            </ion-col>
+  
+            <!--Sección de la foto del pokemon-->
+            <ion-row [ngSwitch]=pokemon.type[0]>
+            <ion-col id="photo" *ngSwitchCase="'Fire'" style="background-color:#F6A368">
+              <img id="pokeimg" src={{pokemon.image}} alt="A pokemon image">
+            </ion-col>
+            <ion-col id="photo" *ngSwitchCase="'Water'"style="background-color:#6FBAFF">
+              <img id="pokeimg" src={{pokemon.image}} alt="A pokemon image">
+            </ion-col>
+            <ion-col id="photo" *ngSwitchCase="'Bug'" style="background-color:#C0DE8E">
+              <img id="pokeimg" src={{pokemon.image}} alt="A pokemon image">
+            </ion-col>
+            <ion-col id="photo" *ngSwitchCase="'Dark'" style="background-color:#373737">
+              <img id="pokeimg" src={{pokemon.image}} alt="A pokemon image">
+            </ion-col>
+            <ion-col id="photo" *ngSwitchCase="'Dragon'" style="background-color:#692BCF">
+              <img id="pokeimg" src={{pokemon.image}} alt="A pokemon image">
+            </ion-col>
+            <ion-col id="photo" *ngSwitchCase="'Electric'" style="background-color:#FFD600">
+              <img id="pokeimg" src={{pokemon.image}} alt="A pokemon image">
+            </ion-col>
+            <ion-col id="photo" *ngSwitchCase="'Fairy'" style="background-color:#FFAFF7">
+              <img id="pokeimg" src={{pokemon.image}} alt="A pokemon image">
+            </ion-col>
+            <ion-col id="photo" *ngSwitchCase="'Fighting'" style="background-color:#FF5656">
+              <img id="pokeimg" src={{pokemon.image}} alt="A pokemon image">
+            </ion-col>
+            <ion-col id="photo" *ngSwitchCase="'Flying'" style="background-color:#AED1D9">
+              <img id="pokeimg" src={{pokemon.image}} alt="A pokemon image">
+            </ion-col>
+            <ion-col id="photo" *ngSwitchCase="'Ghost'" style="background-color:#807CB1">
+              <img id="pokeimg" src={{pokemon.image}} alt="A pokemon image">
+            </ion-col>
+            <ion-col id="photo" *ngSwitchCase="'Grass'" style="background-color:#46D27E">
+              <img id="pokeimg" src={{pokemon.image}} alt="A pokemon image">
+            </ion-col>
+            <ion-col id="photo" *ngSwitchCase="'Rock'" style="background-color:#B8A038">
+              <img id="pokeimg" src={{pokemon.image}} alt="A pokemon image">
+            </ion-col>
+            <ion-col id="photo" *ngSwitchCase="'Ground'" style="background-color:#C88555">
+              <img id="pokeimg" src={{pokemon.image}} alt="A pokemon image">
+            </ion-col>
+            <ion-col id="photo" *ngSwitchCase="'Ice'" style="background-color:#89E3FF">
+              <img id="pokeimg" src={{pokemon.image}} alt="A pokemon image">
+            </ion-col>
+            <ion-col id="photo" *ngSwitchCase="'Normal'" style="background-color:#A8A090">
+              <img id="pokeimg" src={{pokemon.image}} alt="A pokemon image">
+            </ion-col>
+            <ion-col id="photo" *ngSwitchCase="'Poison'" style="background-color:#BF46D2">
+              <img id="pokeimg" src={{pokemon.image}} alt="A pokemon image">
+            </ion-col>
+            <ion-col id="photo" *ngSwitchCase="'Psychic'" style="background-color:#FC62FF">
+              <img id="pokeimg" src={{pokemon.image}} alt="A pokemon image">
+            </ion-col>
+            </ion-row>
+          </ion-row>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
