routerLink instead of href

--- a/pokedex-ultra/src/app/login/login.page.html
+++ b/pokedex-ultra/src/app/login/login.page.html
@@ -25,7 +25,7 @@
     <ion-row>
       <ion-col>
         <p>
-          <a href="/forgot-password">Olvidaste tu contraseña?</a>
+          <a routerLink="/forgot-password">Olvidaste tu contraseña?</a>
         </p>
       </ion-col>
     </ion-row>
@@ -44,7 +44,7 @@
   <ion-row>
     <ion-col>
       <p>
-        <a href="/register">Crear una cuenta</a>
+        <a routerLink="/register">Crear una cuenta</a>
       </p>
     </ion-col>
   </ion-row>
