--- a/pokedex-ultra/src/app/register/register.page.html
+++ b/pokedex-ultra/src/app/register/register.page.html
@@ -26,7 +26,7 @@
   <ion-row>
     <ion-col>
       <p>
-        <a href="/login">Ya tienes una cuenta?</a>
+        <a routerLink="/login">Ya tienes una cuenta?</a>
       </p>
     </ion-col>
   </ion-row>
