Add return to login

--- a/pokedex-ultra/src/app/forgot-password/forgot-password.page.html
+++ b/pokedex-ultra/src/app/forgot-password/forgot-password.page.html
@@ -18,4 +18,12 @@
       </ion-col>
     </ion-row>
   </form>
+
+  <ion-row>
+    <ion-col>
+      <p>
+        <a routerLink="/login">Login</a>
+      </p>
+    </ion-col>
+  </ion-row>
 </ion-content>
