--- a/pokedex-ultra/src/app/verify-email/verify-email.page.html
+++ b/pokedex-ultra/src/app/verify-email/verify-email.page.html
@@ -18,4 +18,12 @@
       <ion-button type="submit" color="primary" expand="block" (click)="onSendEmail()"> Reenviar correo de verificacion </ion-button>
     </ion-col>
   </ion-row>
+
+  <ion-row>
+    <ion-col>
+      <p>
+        <a routerLink="/login">Login</a>
+      </p>
+    </ion-col>
+  </ion-row>
 </ion-content>
