Actualización de login, register, forgot password y componentes de la pokedex

--- a/pokedex-ultra/src/app/forgot-password/forgot-password.page.html
+++ b/pokedex-ultra/src/app/forgot-password/forgot-password.page.html
@@ -1,29 +1,46 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Forgot password</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>  
+  <ion-row style="margin-top: 40px;">
+    <ion-col size="1"></ion-col>
+    <ion-col size="10">
+      <img src="assets/img/pswd-img.png" alt="An image of Snorlax sleeping">
+    </ion-col>
+    <ion-col size="1"></ion-col>
+  </ion-row>
 
-<ion-content>
   <form>
-    <ion-item lines="full">
-      <ion-label position="floating">Email</ion-label>
-      <ion-input type="text" #email required></ion-input>
-    </ion-item>
     <ion-row>
-      <ion-col>
-        <ion-button type="submit" (click)="onResetPassword(email)" expand="block" shape="round">
-          Solicitar reinicio de contraseña
-        </ion-button>
+      <ion-col size="1"></ion-col>
+      <ion-col size="10">
+        <ion-item>
+          <ion-label position="stacked">Type your email</ion-label>
+          <ion-input placeholder="Awesome email!" #email required></ion-input>
+        </ion-item>
       </ion-col>
+      <ion-col size="1"></ion-col>
+    </ion-row>
+
+    <ion-row style="margin-top: 20px;">
+      <ion-col size="1"></ion-col>
+      <ion-col size="1"></ion-col>
+      <ion-col size="8">
+          <button type="submit" class="login" (click)="onResetPassword(email)" class="google"><span><ion-icon name="send" style="text-align: left; font-size: 20px; color: white;"></ion-icon></span>&nbsp; Verify my email</button>
+      </ion-col>
+      <ion-col size="1"></ion-col>
+      <ion-col size="1"></ion-col>
     </ion-row>
   </form>
 
   <ion-row>
     <ion-col>
       <p>
-        <a routerLink="/login">Login</a>
+        <a routerLink="/login">Keep catching all!</a>
       </p>
+    </ion-col>
+  </ion-row>
+
+  <ion-row>
+    <ion-col size="12">
+      <img src="assets/img/pokeball.png" alt="A pokeball in the background" class="background">
     </ion-col>
   </ion-row>
 </ion-content>
