--- a/pokedex-ultra/src/app/home/home.page.html
+++ b/pokedex-ultra/src/app/home/home.page.html
@@ -4,7 +4,7 @@
       <ion-col size="12">
         <ion-row>
           <ion-col size="12">
-            <img src="https://img.icons8.com/ios-filled/50/000000/pokeball--v2.png"/>
+            <img src="assets/img/pokeball.png" id="pokeback"/>
             <h1>What Pokemon are you looking for?</h1>
           </ion-col>
         </ion-row>
@@ -18,7 +18,7 @@
             <Categories [colores] = colores.amarillo (click) = "ruta()" ></Categories>
           </ion-col>
           <ion-col size="6">
-            <Categories [colores] = colores.rojo></Categories>
+            <a href="https://play.google.com/store/search?q=pokemon&hl=es_MX&gl=US"><Categories [colores] = colores.rojo></Categories></a>
           </ion-col>
         </ion-row>
         <ion-row>
