--- a/pokedex-ultra/src/app/login/login.page.scss
+++ b/pokedex-ultra/src/app/login/login.page.scss
@@ -2,3 +2,47 @@
   display: block;
   text-align: center;
 }
+
+img{
+  border: 0px;
+  border-radius: 10px;
+}
+
+ion-item{
+  border: 1px solid #EEEEEE;
+  border-radius: 10px;
+}
+
+.login{
+  background-color: #7386FF !important;
+  border: 0px;
+  border-radius: 10px;
+  text-align: center;
+  width: 100%;
+  height: 50px;
+  z-index: 1;
+  color:white;
+  font-size: 24px;
+  font-weight: 500;
+  font-family: 'Segoe UI';
+}
+.google{
+  background-color: #7386FF !important;
+  border: 0px;
+  border-radius: 10px;
+  text-align: center;
+  width: 100%;
+  height: 50px;
+  z-index: 1;
+  color:white;
+  font-size: 20px;
+  font-weight: 500;
+  font-family: 'Segoe UI';
+}
+p{
+  text-align: right;
+}
+a{
+  text-decoration: none;
+  color: #7386FF;
+}
