--- a/pokedex-ultra/src/app/components/poke-news/poke-news.component.scss
+++ b/pokedex-ultra/src/app/components/poke-news/poke-news.component.scss
@@ -9,6 +9,10 @@ img{
     font-weight: 500;
     text-align: left;
     color: #2B2B2B;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;  
+    overflow: hidden;
 }
 .fecha{
     font-size: 14px;
