--- a/pokedex-ultra/src/app/home/home.page.scss
+++ b/pokedex-ultra/src/app/home/home.page.scss
@@ -23,6 +23,7 @@ h1{
   margin-left: 20px;
   padding-top: 20px;   
   color: black;
+  z-index: 2;
 }
 
 .main-categories{
@@ -37,4 +38,18 @@ h1{
 
 ion-grid{
   background-color: #f5f5f5;
+}
+
+search-bar{
+  z-index: 3;
+}
+#pokeback{
+  width: 200px;
+  position: fixed;
+  top: -50px;
+  opacity: 0.04;
+  z-index: 1;
+}
+a{
+  text-decoration: none;
 }
