--- a/pokedex-ultra/src/app/pokedex/pokedex.page.html
+++ b/pokedex-ultra/src/app/pokedex/pokedex.page.html
@@ -1,21 +1,21 @@
 <ion-content>
+  <!--Botones del encabezado-->
+  <ion-row class="encabezado">
+    <ion-col size="3">
+      <ion-button (click)="ruta()" expand="block" fill="clear" shape="round">
+        <ion-icon name="arrow-back"></ion-icon>
+      </ion-button>
+      
+    </ion-col>
+    <ion-col size="6"></ion-col>
+    <ion-col size="3">
+      <ion-button (click)="onClick()" expand="block" fill="clear" shape="round">
+        <ion-icon name="options"></ion-icon>
+      </ion-button>
+    </ion-col>
+  </ion-row>
+  
   <ion-grid fixed>
-    <!--Botones del encabezado-->
-    <ion-row>
-      <ion-col size="3">
-        <ion-button (click)="ruta()" expand="block" fill="clear" shape="round">
-          <ion-icon name="arrow-back"></ion-icon>
-        </ion-button>
-        
-      </ion-col>
-      <ion-col size="6"></ion-col>
-      <ion-col size="3">
-        <ion-button (click)="onClick()" expand="block" fill="clear" shape="round">
-          <ion-icon name="options"></ion-icon>
-        </ion-button>
-      </ion-col>
-    </ion-row>
-
     <!--Pokecards-->
     <ion-row>
       <ion-col size="6" *ngFor='let pokemon of pokemonArray'>
