--- a/pokedex-ultra/src/app/pokedex/pokedex.page.scss
+++ b/pokedex-ultra/src/app/pokedex/pokedex.page.scss
@@ -1,9 +1,14 @@
-ion-icon {    
-    color: #0000;
-}
+
 *{
     font-size: 10px;
 }
+
+ion-icon {
+    color: #000;
+    font-size: 24px;
+    margin-top: 10px;
+}
+
 img{
     width: 120px;
     margin-top: 20px;
