--- a/pokedex-ultra/src/app/register/register.page.html
+++ b/pokedex-ultra/src/app/register/register.page.html
@@ -1,25 +1,44 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Register User</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+  
+  <ion-row style="margin-top: 40px;">
+    <ion-col size="1"></ion-col>
+    <ion-col size="10">
+      <img src="assets/img/register-img.png" alt="An image of Snorlax sleeping">
+    </ion-col>
+    <ion-col size="1"></ion-col>
+  </ion-row>
+
   <form>
-    <ion-item lines="full">
-      <ion-label position="floating">Email</ion-label>
-      <ion-input type="text" #email required></ion-input>
-    </ion-item>
-    <ion-item lines="full">
-      <ion-label position="floating">Password</ion-label>
-      <ion-input type="password" #password required></ion-input>
-    </ion-item>
     <ion-row>
-      <ion-col>
-        <ion-button type="submit" (click)="onRegister(email, password)" expand="block" shape="round">
-          Register
-        </ion-button>
+      <ion-col size="1"></ion-col>
+      <ion-col size="10">
+        <ion-item>
+          <ion-label position="stacked">Email</ion-label>
+          <ion-input placeholder="Awesome email!" #email required></ion-input>
+        </ion-item>
       </ion-col>
+      <ion-col size="1"></ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size="1"></ion-col>
+      <ion-col size="10">
+        <ion-item>
+          <ion-label position="stacked">Password</ion-label>
+          <ion-input placeholder="Awesome password!" type="password" #password required></ion-input>
+        </ion-item>
+      </ion-col>
+      <ion-col size="1"></ion-col>
+    </ion-row>
+
+    <ion-row style="margin-top: 20px;">
+      <ion-col size="1"></ion-col>
+      <ion-col size="1"></ion-col>
+      <ion-col size="8">
+          <button type="submit" class="login" (click)="onRegister(email, password)" class="google"><span><ion-icon name="log-in-outline" style="text-align: left; font-size: 20px; color: white;"></ion-icon></span>&nbsp; Register Now!</button>
+      </ion-col>
+      <ion-col size="1"></ion-col>
+      <ion-col size="1"></ion-col>
     </ion-row>
   </form>
 
@@ -28,6 +47,12 @@
       <p>
         <a routerLink="/login">Ya tienes una cuenta?</a>
       </p>
+    </ion-col>
+  </ion-row>
+
+  <ion-row>
+    <ion-col size="12">
+      <img src="assets/img/pokeball.png" alt="A pokeball in the background" class="background">
     </ion-col>
   </ion-row>
 </ion-content>
