actualización del componente de pokemon y el service de pokemones

--- a/pokedex-ultra/src/app/pokedex/pokedex.page.html
+++ b/pokedex-ultra/src/app/pokedex/pokedex.page.html
@@ -19,7 +19,7 @@
     <!--Pokecards-->
     <ion-row>
       <ion-col size="6" *ngFor='let pokemon of pokemonArray'>
-        <div [ngSwitch] = "pokemon.type[0]" >
+        <div [ngSwitch] = "pokemon.type[0]" (click)=" passPokemonIdToService(pokemon.position,pokemon.type[0])">
 
         <ion-card *ngSwitchCase="'Fire'" style="background-color:#fa8d3e">
           <!--Nombre, numero y tipos-->
