Ya logra colorear la página de los datos del pokemon

--- a/pokedex-ultra/src/app/components/pokemon-data/pokemon-data.component.html
+++ b/pokedex-ultra/src/app/components/pokemon-data/pokemon-data.component.html
@@ -1,6 +1,11 @@
-<ion-row [ngStyle]="{'background-color': cardColors[colores]}" class="fondo">
-  <ion-col size="12"></ion-col>
-</ion-row>
+<div [ngStyle]="{'background-color': colores[tipo]}">
+  <ion-row>
+    <ion-col size="12">
+      <h1>cola de david</h1>
+    </ion-col>
+  </ion-row>
+</div>
+
 
 <!-- Botones del encabezado
 <ion-row class="encabezado">
