--- a/pokedex-ultra/src/app/pokemon/pokemon.page.html
+++ b/pokedex-ultra/src/app/pokemon/pokemon.page.html
@@ -1,3 +1,3 @@
 <ion-content>
-  <Pokemon-data [color] = color.{{type}}></Pokemon-data>
+  <Pokemon-data [tipo] = "type"></Pokemon-data>
 </ion-content>
