--- a/pokedex-ultra/src/app/components/pokemon-data/pokemon-data.component.html
+++ b/pokedex-ultra/src/app/components/pokemon-data/pokemon-data.component.html
@@ -1,8 +1,42 @@
-<div [ngStyle]="{'background-color': colores[tipo]}">
-  <ion-row>
-    <ion-col size="12">
-      <h1>cola de david</h1>
+<div [ngStyle]="{'background-color': colores[tipo]}" *ngFor='let pokemon of pokemonArray'>
+  <!--Botones del encabezado-->
+  <ion-row class="encabezado">
+    <ion-col size="3">
+      <ion-button (click)="ruta()" expand="block" fill="clear" shape="round">
+        <ion-icon name="arrow-back" style="color: #FFFF;"></ion-icon>
+      </ion-button>
+      
     </ion-col>
+    <ion-col size="6"></ion-col>
+    <ion-col size="3">
+      <ion-button (click)="onClick()" expand="block" fill="clear" shape="round">
+        <ion-icon name="options" style="color: #FFFF;"></ion-icon>
+      </ion-button>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col size="1"></ion-col>
+    <ion-col size="8">
+      <span class="name">{{pokemon.name}}</span>
+    </ion-col>
+    <ion-col size="2" class="id-row">
+      <span class="id">#{{pokemon.position}}</span>
+    </ion-col>
+    <ion-col size="1"></ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col size="1"></ion-col>
+    <ion-col size="4" *ngFor='let type of pokemon.type'>
+      <span class="tipo">{{type}}</span>
+    </ion-col>
+  </ion-row>
+  <img src="assets/img/pokeball white.png" alt="A white pokeball in the background" class="pokeball-background">
+  <ion-row>
+    <ion-col size="2"></ion-col>
+    <ion-col size="8">
+      <img src="{{pokemon.image}}" alt="An image of a Pokemon" class="pokemon">
+    </ion-col>
+    <ion-col size="2"></ion-col>    
   </ion-row>
 </div>
 
