Change home text

--- a/pokedex-ultra/src/app/components/categories/categories.component.html
+++ b/pokedex-ultra/src/app/components/categories/categories.component.html
@@ -3,7 +3,7 @@
     <ion-row>
       <span [ngStyle]="{'background-color': secondaryCardColor[colores]}" class="circulo"></span>
       <ion-col size="12">
-        <h3>Pokedex</h3>
+        <h3>{{text[colores]}}</h3>
         <img src='assets/img/pokeball white.png'/>
       </ion-col>
     </ion-row>
