trainer card set up

--- a/pokedex-ultra/src/app/home/home.page.html
+++ b/pokedex-ultra/src/app/home/home.page.html
@@ -18,7 +18,7 @@
             <Categories [colores] = colores.amarillo (click) = "ruta()" ></Categories>
           </ion-col>
           <ion-col size="6">
-            <a href="https://play.google.com/store/search?q=pokemon&hl=es_MX&gl=US"><Categories [colores] = colores.rojo></Categories></a>
+            <Categories [colores] = colores.rojo (click) = "trainerCard()" ></Categories>
           </ion-col>
         </ion-row>
         <ion-row>
@@ -26,7 +26,7 @@
             <Categories [colores] = colores.azul></Categories>
           </ion-col>
           <ion-col size="6">
-            <Categories [colores] = colores.verde></Categories>
+            <a href="https://play.google.com/store/search?q=pokemon&hl=es_MX&gl=US"><Categories [colores] = colores.verde></Categories></a>
           </ion-col>
         </ion-row>
         <ion-row>
