temp disable news

--- a/pokedex-ultra/src/app/home/home.page.html
+++ b/pokedex-ultra/src/app/home/home.page.html
@@ -39,11 +39,12 @@
         </ion-row>        
       </ion-col>
     </ion-row>
+    <!--
     <ion-row class="main-news">
       <ion-col size="12">
         <Poke-news></Poke-news>
       </ion-col>
-    </ion-row>
+    </ion-row>-->
     
   </ion-grid>
 </ion-app>
