trainer card progress

--- a/pokedex-ultra/src/app/trainer-card/trainer-card.page.html
+++ b/pokedex-ultra/src/app/trainer-card/trainer-card.page.html
@@ -1,9 +1,17 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>trainer-card</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+  <ion-row>
+    <ion-col size="3">
+      <ion-button (click)="ruta()" expand="block" fill="clear" shape="round">
+        <ion-icon name="arrow-back"></ion-icon>
+      </ion-button>
+    </ion-col>
+  </ion-row>
 
+  <div class="card">
+    <div class="header">
+      <div class="avatar">
+        <img src="../../assets/userImgs/male.jpg" alt="">
+      </div>
+    </div>
+  </div>
 </ion-content>
